fixed layout issues

--- a/Exercise-1/styles.css
+++ b/Exercise-1/styles.css
@@ -84,6 +84,11 @@ p, label {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    > * {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
@@ -106,7 +111,7 @@ p, label {
     ". . . . ."
     ;
 
-    .a, .b, .c, .d, .e, .f, .g, .h, .i {
+    .sq {
         background-color: #fff;
         border-radius: var(--borderRadius);
         display: flex;
@@ -234,12 +239,13 @@ p, label {
 }
 
 form {
-    width: 50vw;
-    height:30vh;
+    width: 60%;
+    height:40%;
     display: flex;
+    flex-direction: column;
     background-color: var(--darkGrey);
     border-radius: var(--borderRadius);
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 
     fieldset {
@@ -269,9 +275,6 @@ input[type="text"] {
     font-weight: bold;
 }
 
-#circle, #cross {
-    width: 3vw;
-}
 
 .opponentName {
     margin-top: 2vh;
